feat: error popup for input that are not accepted

--- a/src/style.sass
+++ b/src/style.sass
@@ -241,7 +241,7 @@ main
         margin-bottom: 5px
 
     button
-        margin-top: 1.5rem
+        margin-top: 1rem
 
 #submit-item-button
     margin-left: auto
@@ -460,6 +460,10 @@ main
     font-family: 'Courier New', Courier, monospace
     background: var(--header)
     word-wrap: break-word
+
+.error-popup
+    text-align: center
+    margin-top: 1rem
 
 /** At rules
 
