--- a/src/style.sass
+++ b/src/style.sass
@@ -1,3 +1,5 @@
+@use "sass:color"
+
 @import url('https://fonts.googleapis.com/css2?family=Jost&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap')
 
@@ -39,72 +41,122 @@ h1, h2, h3, h4, h5, h6
 #root, #__next
     isolation: isolate
 
-/* Palette generation
+h2
+    font-size: 2.2rem
 
-$dark-colors: "text" #e8f5fc, "background" #242d33, "primary" #b9d8e4, "secondary" #3b5463, "accent" #81bee9
+h3
+    font-size: 1.8rem
 
-@mixin generate-transparencies($color-map)
-    @each $name, $color in $color-map
-        --#{$name}: #{$color}
-        @for $i from 1 to 20
-            --#{$name}-#{$i * 5}: #{rgba($color, calc($i * 5 / 100))}
+/* Catppuccin Palette
 
-:root
-    @include generate-transparencies($dark-colors)
-
-    --header: #1f2428
-    --overlay: #1c2020bd
-    --lightarm: #6f6f26
-    --heavyarm: #754d1d
-    --heavyshell: #902c2a
-    --utilities: #30467e
-    --medical: #436c2c
-    --uniform: #733883
+$rosewater: #f5e0dc
+$flamingo: #f2cdcd
+$pink: #f5c2e7
+$mauve: #cba6f7
+$red: #f38ba8
+$maroon: #eba0ac
+$peach: #fab387
+$yellow: #f9e2af
+$green: #a6e3a1
+$teal: #94e2d5
+$sky: #89dceb
+$sapphire: #74c7ec
+$blue: #89b4fa
+$lavender: #b4befe
+$text: #cdd6f4
+$subtext1: #bac2de
+$subtext0: #bac2de
+$overlay2: #9399b2
+$overlay1: #7f849c
+$overlay0: #6c7086
+$surface2: #585b70
+$surface1: #45475a
+$surface0: #313244
+$base: #1e1e2e
+$mantle: #181825
+$crust: #11111b
 
 /**
  Custom reset configuration
 
+body
+    background-color: $base
+    color: $text
+    display: flex
+    flex-direction: column
+    height: 100vh
+
+header
+    display: flex
+    align-content: center
+    align-items: center
+    background-color: $mantle
+    position: relative
+    padding: 10px 0
+
+    button
+        margin-right: 1rem
+
+#title
+    /** https://stackoverflow.com/a/1777282 ; wow.
+    font-size: 1.5rem
+    position: absolute
+    left: 0
+    right: 0
+    margin-inline: auto
+    width: fit-content
+
+#app-name
+    margin-left: 1rem
+    margin-right: auto
+
+main
+    margin-top: 1rem
+    display: flex
+    flex-direction: column
+    flex-grow: 1
+
 button
-    background-color: var(--primary-20)
+    background-color: $surface0
     border: 0
     padding: 2px 6px
     border-radius: 4px
-    color: var(--text)
+    color: $text
     height: fit-content
     width: fit-content
 
 button:hover
-    background-color: var(--primary-30)
+    background-color: $surface1
 
 button:active
-    background-color: var(--primary-15)
+    background-color: $surface2
 
 button:disabled
-    background-color: var(--primary-5)
+    background-color: $mantle
 
 button.accent
-    background-color: var(--primary)
-    color: var(--background)
+    background-color: $sky
+    color: $base
 
 button.accent:hover
-    background-color: var(--primary-80)
+    background-color: color.scale($sky, $lightness: 10%)
 
 button.accent:active
-    background-color: var(--primary-60)
+    background-color: color.scale($sky, $lightness: 20%)
 
 button.accent:disabled
-    color: var(--text)
-    background-color: var(--primary-5)
+    color: $text
+    background-color: color.scale($sky, $lightness: -80%)
 
 input, textarea
-    background-color: var(--background)
-    border: 2px solid var(--primary-30)
+    background-color: $crust
+    border: 2px solid $surface0
     border-radius: 4px
-    color: var(--text)
+    color: $text
     padding: 2px 6px 2px 6px
 
 input:focus, textarea:focus
-    border: 2px solid var(--accent)
+    border: 2px solid $sapphire
     outline: none
 
 textarea
@@ -113,7 +165,7 @@ textarea
 footer
     display: none
     text-align: center
-    background-color: var(--header)
+    background-color: $mantle
     padding: 5px 0
 
 /** This is probably not a good idea
@@ -128,7 +180,6 @@ input[type=number]::-webkit-outer-spin-button
 
 .table
     display: grid
-
     margin: 0 auto 1rem auto
 
 .table-cell
@@ -137,20 +188,16 @@ input[type=number]::-webkit-outer-spin-button
     padding: 0 5px
 
 .table-cell:not(:last-child)
-    border-right: 2px solid var(--accent-60)
+    border-right: 2px solid $sapphire
 
 .table-header
-    font-size: 1.22rem
     margin-top: auto
     margin-bottom: 0.5rem
     text-align: center
-    background-color: var(--background)
 
 .table-content
-    font-size: 1.1rem
     margin-top: auto
     text-align: center
-    background-color: var(--background)
 
 #stat-basic
     width: 60vw
@@ -176,51 +223,13 @@ input[type=number]::-webkit-outer-spin-button
     .table-header
         margin-top: 0
         font-weight: bold
-        font-size: 1.3rem
 
 select
-    background-color: var(--background)
-    border: 2px solid var(--primary-30)
+    background-color: $crust
+    border: 2px solid $surface0
     border-radius: 4px
-    color: var(--text)
+    color: $text
     padding: 2px 6px 2px 6px
-
-body
-    background-color: var(--background)
-    color: var(--text)
-    display: flex
-    flex-direction: column
-    height: 100vh
-
-header
-    display: flex
-    align-content: center
-    align-items: center
-    background-color: var(--header)
-    position: relative
-    padding: 10px 0
-
-    button
-        margin-right: 1rem
-
-#title
-    /** https://stackoverflow.com/a/1777282 ; wow.
-    position: absolute
-    left: 0
-    right: 0
-    margin-inline: auto
-    font-size: 1.3rem
-    width: fit-content
-
-#app-name
-    margin-left: 1rem
-    margin-right: auto
-
-main
-    margin-top: 1rem
-    display: flex
-    flex-direction: column
-    flex-grow: 1
 
 /** Configuration View
 
@@ -291,7 +300,6 @@ main
     align-items: center
 
 #manu-qs
-    font-size: 1.2rem
     margin-bottom: 0.5rem
 
 #item-to-craft
@@ -303,7 +311,6 @@ main
 .manu-item-line
     display: flex
     gap: 10px
-    background-color: var(--secondary-40)
     padding: 10px
     border-radius: 5px
     align-items: center
@@ -330,9 +337,8 @@ main
 
 .manu-button-popup-show
     text-align: center
-    background-color: var(--secondary)
-    font-size: 1.2rem
-    border-top: 2px solid #f3ee5c
+    background-color: $surface0
+    border-top: 2px solid $lavender
     height: 2.5rem
     line-height: 2.5rem
     width: 3.2rem
@@ -347,7 +353,6 @@ main
 /** Result
 
 .result-hd
-    font-size: 1.2rem
     margin-top: 3rem
     text-align: center
 
@@ -390,36 +395,27 @@ main
     margin-right: 5px
 
 .lightarm
-    background: linear-gradient(135deg, var(--lightarm), 5%, var(--primary-10) 50%)
+    background: linear-gradient(120deg, $yellow, 2%, $mantle 85%)
 
 .heavyarm
-    background: linear-gradient(135deg, var(--heavyarm), 5%, var(--primary-10) 50%)
+    background: linear-gradient(120deg, $peach, 2%, $mantle 85%)
 
 .heavyshell
-    background: linear-gradient(135deg, var(--heavyshell), 5%, var(--primary-10) 50%)
+    background: linear-gradient(120deg, $red, 2%, $mantle 85%)
 
 .utilities
-    background: linear-gradient(135deg, var(--utilities), 5%, var(--primary-10) 50%)
+    background: linear-gradient(120deg, $blue, 2%, $mantle 85%)
 
 .medical
-    background: linear-gradient(135deg, var(--medical), 5%, var(--primary-10) 50%)
+    background: linear-gradient(120deg, $green, 2%, $mantle 85%)
 
 .uniform
-    background: linear-gradient(135deg, var(--uniform), 5%, var(--primary-10) 50%)
+    background: linear-gradient(120deg, $mauve, 2%, $mantle 85%)
 
 /** Others
 
 .hidden
     display: none !important
-
-.vertical-separator
-    border: 1px solid var(--accent-60)
-    border-radius: 4px
-    margin: 15px 0
-
-.vertical-line
-    margin: 0 auto
-    text-align: center
 
 .line
     margin: 10px 0
@@ -435,7 +431,7 @@ main
     top: 0
     width: 100vw
     height: 100vh
-    background-color: var(--overlay)
+    background-color: color.adjust($overlay0, $alpha: -0.6)
 
 .overlay-content
     margin: auto
@@ -445,7 +441,7 @@ main
     height: fit-content
     max-height: 80vh
     overflow: scroll
-    background-color: var(--background)
+    background-color: $base
 
     h3
         text-align: center
@@ -458,11 +454,12 @@ main
 .codeblock
     padding: 10px
     font-family: 'Courier New', Courier, monospace
-    background: var(--header)
+    background: $crust
     word-wrap: break-word
 
 .error-popup
     text-align: center
+    color: $red
     margin-top: 1rem
 
 /** At rules
@@ -484,7 +481,7 @@ main
 
         .table-cell:not(:last-child)
             border-right: none
-            border-bottom: 2px solid var(--accent-60)
+            border-bottom: 2px solid $sapphire
 
         .table-content
             padding-bottom: 0.75rem
