--- a/src/style.sass
+++ b/src/style.sass
@@ -119,7 +119,7 @@ main
 button
     background-color: $surface0
     border: 0
-    padding: 2px 6px
+    padding: 5px 10px
     border-radius: 4px
     color: $text
     height: fit-content
@@ -200,7 +200,7 @@ input[type=number]::-webkit-outer-spin-button
 .item-description
     text-align: center
 
-#stat-basic
+#stat-basic, #stat-button-group
     width: 60vw
 
     .table-item
@@ -372,6 +372,7 @@ select
     position: relative
     width: 3.2rem
     height: 3.2rem
+    padding: 5px
     margin: 0 5px
 
 /** Result
@@ -386,13 +387,36 @@ select
 
 /** Stat View
 
+#stat-import-export-overlay 
+    .overlay-content
+        width: 75vw
+        display: flex
+        justify-content: center
+
+    .overlay-content > *
+        display: flex
+        flex-direction: column
+        gap: 1rem
+        flex-grow: 1
+        padding: 0 1.5rem
+
+        textarea
+            flex-grow: 1
+            min-height: 10rem
+
+    #stat-import-data
+        border-right: 2px solid $sapphire
+
+        button
+            margin: 0 auto
+
+#stat-button-group
+    justify-content: flex-end
+    margin: 0 auto 1.5rem auto
+
 .stat-header
     text-align: center
     margin-bottom: 1.5rem
-
-#stat-reset
-    display: block
-    margin: 0 auto
 
 /** Item Card
 
@@ -444,6 +468,11 @@ select
 .line
     margin: 10px 0
     text-align: center
+
+.group
+    display: flex
+    flex-direction: row
+    gap: 1.5rem
 
 .label
     margin-bottom: 5px
@@ -499,11 +528,11 @@ select
     #stat-material
         width: 95vw
 
-    #stat-basic
+    #stat-basic, #stat-button-group
         width: 95vw
 
-        #logihub-input textarea
-            min-height: 10ch
+    #logihub-input textarea
+        min-height: 10ch
 
     #data-input-table
         width: fit-content
