add material usage to end screen

--- a/src/style.sass
+++ b/src/style.sass
@@ -244,7 +244,7 @@ input[type=number]::-webkit-outer-spin-button
         font-weight: normal
         color: $text
 
-#result-table
+#result-table, #result-material
     width: 50vw
 
 select
@@ -521,7 +521,7 @@ select
     #manu-view
         width: 75vw
 
-    #result-table
+    #result-table, #result-material
         width: 75vw
 
 @media (max-width: 700px)
