feat: seamless upgrade from userv1 to userv2

--- a/src/style.sass
+++ b/src/style.sass
@@ -200,13 +200,13 @@ input[type=number]::-webkit-outer-spin-button
 .item-description, .item-fluff
     text-align: center
 
-#stat-basic, #stat-button-group
+.stat-basic, #stat-button-group
     width: 60vw
 
     .table-item
         min-width: 240px
 
-#stat-material
+.stat-material
     width: 60vw
 
     .table-item
