feat: allow resetting current war stat

--- a/src/style.sass
+++ b/src/style.sass
@@ -200,7 +200,7 @@ input[type=number]::-webkit-outer-spin-button
 .item-description, .item-fluff
     text-align: center
 
-.stat-basic, #stat-button-group
+.stat-basic, .stat-button-group
     width: 60vw
 
     .table-item
@@ -413,7 +413,7 @@ select
         button
             margin: 0 auto
 
-#stat-button-group
+.stat-button-group
     justify-content: flex-end
     margin: 0 auto 1.5rem auto
 
@@ -545,7 +545,7 @@ select
     #stat-material
         width: 95vw
 
-    #stat-basic, #stat-button-group
+    #stat-basic, .stat-button-group
         width: 95vw
 
     #logihub-input textarea
