--- a/src/style.sass
+++ b/src/style.sass
@@ -286,6 +286,12 @@ select
     width: fit-content
     margin: 1rem auto 0 auto
 
+#config-filter-cost
+    display: flex
+    margin: 1rem auto 0 auto
+    gap: 0.75rem
+    flex-wrap: wrap
+
 #logihub-input
     textarea
         flex-grow: 1
