--- a/src/style.sass
+++ b/src/style.sass
@@ -1,7 +1,6 @@
 @use "sass:color"
 
-@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap')
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400..700;1,400..700&display=swap')
 
 /*
  Josh's Custom CSS Reset
@@ -384,7 +383,9 @@ select
 /** Result
 
 .result-hd
-    margin-top: 3rem
+    margin-top: 1.5rem
+    font-size: 1.7rem
+    font-weight: bold
     text-align: center
 
 #result-item-crafted
@@ -523,6 +524,24 @@ select
     text-align: center
     color: $red
     margin-top: 1rem
+
+.achievement-card
+    min-width: 300px
+    max-width: 400px
+    height: fit-content
+
+.achievement-name
+    font-size: 1.4rem
+    font-weight: bold
+
+.achievement-fluff
+    margin-top: 10px
+    font-style: italic
+    color: $overlay2
+
+#stat-owned-achievements, #result-achievements-unlocked
+    width: 95vw !important
+    justify-content: space-evenly
 
 /** At rules
 
